# FoundationOne-to-Oncoprinter

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
DOC/: xml_structure_explanation.md
src/: README.md  all_genes.py  combine_csv_to_excel.py  common.py  extract_copy_number_alterations.py  extract_microsatellite_instability.py  extract_patient_medical_info.py  extract_rearrangements.py  extract_short_variants.py  extract_tumor_mutation_burden.py  gene_comutation_chord.py  genetic_workshop_gui.py  to_oncoprinter_clinical_data.py  to_oncoprinter_filtered_by_dx.py  to_oncoprinter_mutation_map_validated_dataset.py  to_oncoprinter_validated_dataset.py  xml_to_json.py
